--- a/data/templates/default/module_head.html
+++ b/data/templates/default/module_head.html
@@ -45,7 +45,7 @@
 		</script>
 	</head>
 	<body>
-		<table style="width:100%; vertical-align:center; text-align: center; clear: both; ">
+		<table style="width:100%; vertical-align:middle; text-align: center; clear: both; ">
 [%- FOR source = sources -%]
 			<tr>
 				<th>[% IF !first %][% first = 1 %][% module %][% END %]</th>
