--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -527,6 +527,10 @@
 			</div>
 		</div>
 		<a href="http://docperl.sourceforge.net/" target="_blank">DocPerl Home Page</a>
+		[% IF ClearCache -%]
+		<br />
+		<a href="?clearcache=1" target="_top">Clear Cache</a>
+		[%- END %]
 		<br />
 		<a href="?page=list&sidebar=1">Bookmark for Firefox sidebar</a>
 	</body>
