Bug 1483649: Fixed no api displaying (was returning a hash ref instead of a hash).\nFixed class hirachy when more than one package is defined.\nAdded display of extra defined packages.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@40 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html
+++ b/data/templates/default/api.html
@@ -106,11 +106,38 @@
 			<ul>
 			[% END %]
 		</div>
+		[% UNLESS api %]
+		API Missing
+		[% END %]
 		<table>
 			[% IF api.package %]
 			<tr>
 				<th>Package</th>
 				<td>[% module %]</td>
+			</tr>
+			[% END -%]
+			[% IF api.packages %]
+			<tr>
+				<th>Other Packages</th>
+				<td class="double_list">
+					<table>
+					[% counter = 1 -%]
+					[% FOR package = api.packages -%]
+						[% IF counter % 2 %]
+						<tr>
+						[% END %]
+							<td>[% package %]</td>
+						[% IF !(counter % 2) %]
+						</tr>
+						[% END -%]
+						[% counter = counter + 1 -%]
+					[% END -%]
+					[% IF !(counter % 2) %]
+						[% IF counter > 2 %]<td></td>[% END %]
+						</tr>
+					[% END -%]
+					</table>
+				</td>
 			</tr>
 			[% END -%]
 			[% IF api.version %]
