Fixed 1488583: Now limiting the number of displied recent modules to history_size config setting Added ability for toplevel page to pass on different pages to open in non list frame Changed styles slightly Added ability show/hide the different sections to help with navigation of the lists
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@42 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/frames.html
+++ b/data/templates/default/frames.html
@@ -15,6 +15,6 @@
 	</head>
 	<frameset cols="255,*">
 		<frame name="menu"	src="?page=list"></frame>
-		<frame name="main"	src="?page=module&amp;module=perl__pod__perlfunc"></frame>
+		<frame name="main"	src="?page=module&amp;module=[% module %]"></frame>
 	</frameset>
 </html>
