--- a/data/templates/default/css.css
+++ b/data/templates/default/css.css
@@ -3,13 +3,15 @@
  */
 
 pre {
-	background-color:	#DDD;
+	background-color:	#EEE;
+	border:				solid 1px black;
+	padding:			2px;
 }
 body {
 	font-family:		sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-	background-color:	#BCB;
+	background-color:	#ADA;
 	font-family:		serif;
 	-moz-border-radius:	5px;
 }
