Fixed 1496815: Opera & IE do not appear to clear CSS style when csstext property set, so manually set display to block
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@55 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -319,6 +319,7 @@
 				var recent_ul	= document.getElementById('ul_recent');
 				var name		= '';
 				recent_doc.style.cssText = '';
+				recent_doc.style.display = 'block';
 				
 				for ( var i = 2; i < path_parts.length; i++ ) {
 					if ( i != 2 )
