--- a/data/templates/default/module_head.html
+++ b/data/templates/default/module_head.html
@@ -49,14 +49,14 @@
 [%- FOR source = sources -%]
 			<tr>
 				<th>[% IF !first %][% first = 1 %][% module %][% END %]</th>
-				<td><a target="contents" href="?page=pod&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]"> POD </a></td>
+				<td><a target="contents" title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> POD </a></td>
 				<td>
 	[%- UNLESS source.suffix == 'pod' -%]
-				<a target="contents" href="?page=api&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]"> API </a>
+				<a target="contents" title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> API </a>
 	[%- END -%]
 				</td>
-				<td><a target="contents" href="?page=code&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]">CODE</a></td>
-				<td><a target="contents" href="http://search.cpan.org/search?query=[% module %]&mode=module"> CPAN</a></td>
+				<td><a target="contents" title="View source code" href="?page=code&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]">CODE</a></td>
+				<td><a target="contents" title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% module %]&amp;mode=module"> CPAN</a></td>
 			</tr>
 [%- END -%]
 		</table>
